--- a/dev/deployment.yaml
+++ b/dev/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: dev-container
-        image: <todo>
+        image: us-east1-docker.pkg.dev/qwiklabs-gcp-00-cda826c920c3/my-repository/sample-app:v1.0 
         ports:
         - containerPort: 8080
