--- a/prod/deployment.yaml
+++ b/prod/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: production-container
-        image: image: us-east1-docker.pkg.dev/qwiklabs-gcp-00-cda826c920c3/my-repository/sample-app:v1.0
+        image: us-east1-docker.pkg.dev/qwiklabs-gcp-00-cda826c920c3/my-repository/hello-cloudbuild:v1.0
         ports:
         - containerPort: 8080
